--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
+    "babel-relay-plugin": "^0.3.0",
+    "graphql": "^0.4.12",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
+    "react-relay": "^0.4.0",
+    "sync-request": "^2.1.0",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.11.0"
   }
